--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "name": "magenxcommerce/module-media-gallery",
     "description": "Magento module responsible for media handling",
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
+    "version": "100.3.1",
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
@@ -8,11 +14,6 @@
         "magento/module-cms": "103.0.*",
         "magento/module-catalog": "103.0.*"
     },
-    "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -20,6 +21,5 @@
         "psr-4": {
             "Magento\\MediaGallery\\": ""
         }
-    },
-    "version": "100.3.1"
+    }
 }
